fixed more queries and multiselect behavior in QueryBuilder