@@ -3,6 +3,7 @@ package kernbeisser.Reports;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.EntityTransaction;
 import jakarta.persistence.NoResultException;
+import java.time.Instant;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
@@ -58,9 +59,9 @@ public class AccountingReport extends Report {
   static String getReportTitle(long reportNo, List<Transaction> transactions) {
     return (reportNo == 0 ? "Umsatzbericht " : "LD-Endabrechnung Nr. " + reportNo)
         + "    "
-        + Date.INSTANT_DATE.format(transactions.get(0).getDate())
+        + Date.INSTANT_DATE.format(transactions.getFirst().getDate())
         + " bis "
-        + Date.INSTANT_DATE.format(transactions.get(transactions.size() - 1).getDate());
+        + Date.INSTANT_DATE.format(transactions.getLast().getDate());
   }
 
   static long countVatValues(Collection<Purchase> purchases, VAT vat) {
@@ -187,9 +188,7 @@ public class AccountingReport extends Report {
         }
       }
     }
-    long lastTransactionId = transactions.stream().mapToLong(Transaction::getId).max().getAsLong();
-    Map<String, Object> reportParams =
-        UserGroup.getValueAggregatesAtTransactionId(lastTransactionId);
+    Map<String, Object> reportParams = UserGroup.getValueAggregatesAt(Instant.now());
     reportParams.put("transactionSaldo", transactionSaldo);
     reportParams.put("transactionCreditPayIn", transactionCreditPayIn);
     reportParams.put("transactionSpecialPayments", transactionSpecialPayments);
